docker-deployment-v1/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-mvc-v1
  labels:
    app: sample-mvc
    version: v1
spec:
  selector:
    matchLabels:
      app: sample-mvc
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: sample-mvc
        version: v1
    spec:
      containers:
        - name: sample-mvc
          #imagePullPolicy: Never
          image: mesalman/app:v1
          resources:
            limits:
              memory: "50Mi"
              cpu: "50m"
            requests:
              memory: "20Mi"
              cpu: "20m"
          ports:
          - containerPort: 80
