docker-deployment-v1/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-mvc-v1
  labels:
    app: sample-mvc
    version: v1
spec:
  ports:
    - port: 80
  selector:
    app: sample-mvc
    version: v1
  type: ClusterIP
